--- a/INSTALL
+++ b/INSTALL
@@ -3,15 +3,17 @@
 To install this module, just do:
 
   perl Build.PL
+  ./Build
   ./Build test
   ./Build install  (this step may need to be done as the superuser)
 
-For other operating systems that don't like the "./" syntax, like
-Windows-based systems, you can do:
+Or, if you're on a platform (like DOS or Windows) that doesn't require
+the "./" notation, you can do this:
 
   perl Build.PL
-  perl Build test
-  perl Build install
+  Build
+  Build test
+  Build install
 
 The important thing is that the "Build" script gets executed and that
 you pass it the "test", "install", etc. arguments.
@@ -22,8 +24,9 @@ If you really want to, you can use a more traditional Makefile.PL:
   make test
   make install     (this step may need to be done as the superuser)
 
-Substitute "nmake" or "gmake" for "make" if you prefer using some
-other make-alike on your platform.
+Substitute "nmake" or "gmake" for "make" if you use some other
+make-alike on your platform - 'perl -V:make' can tell you what you
+should use.
 
 I recommend using the Build.PL option.  If you use the Makefile.PL
 option, you'll actually be using the Build.PL option under the surface
